hphp/hack/test/typecheck/coeffects/test_enforcement_on_polymorphic_coeffects.php.exp
File "test_enforcement_on_polymorphic_coeffects.php", line 11, characters 9-24:
Writing to object properties requires the capability WriteProperty, which is not provided by the context. Add the context `[write_props]` after the function parameter list (or amend an existing context with a new comma delineated entry `write_props`). (Parsing[1002])
File "test_enforcement_on_polymorphic_coeffects.php", line 22, characters 9-24:
Writing to object properties requires the capability WriteProperty, which is not provided by the context. Add the context `[write_props]` after the function parameter list (or amend an existing context with a new comma delineated entry `write_props`). (Parsing[1002])
File "test_enforcement_on_polymorphic_coeffects.php", line 27, characters 5-20:
Writing to object properties requires the capability WriteProperty, which is not provided by the context. Add the context `[write_props]` after the function parameter list (or amend an existing context with a new comma delineated entry `write_props`). (Parsing[1002])
File "test_enforcement_on_polymorphic_coeffects.php", line 31, characters 5-20:
Writing to object properties requires the capability WriteProperty, which is not provided by the context. Add the context `[write_props]` after the function parameter list (or amend an existing context with a new comma delineated entry `write_props`). (Parsing[1002])
File "test_enforcement_on_polymorphic_coeffects.php", line 38, characters 5-20:
Writing to object properties requires the capability WriteProperty, which is not provided by the context. Add the context `[write_props]` after the function parameter list (or amend an existing context with a new comma delineated entry `write_props`). (Parsing[1002])
